--- a/css/style.css
+++ b/css/style.css
@@ -316,8 +316,9 @@ p {
 }
 
 #about p{
-  padding-bottom: 1rem;
-  margin-bottom: 1rem;
+  width: 50%;
+  text-align: center;
+  margin-left: 27rem;
 }
 
 /* #about p a {
